--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -38,6 +38,7 @@
         }
 
         &:hover {
+            cursor: pointer;
             color: rgba(0, 214, 252, 1);
             text-shadow: 0 0 8px rgba(0, 214, 252, 0.4);
             &.buttonBase::before {
@@ -65,6 +66,14 @@
             }
             .buttonSideRight {
                 box-shadow: 2px -2px 2px  rgba(0, 214, 252, 0.3);;        
+            }
+        }
+        &:active {
+            .buttonSideLeft::after {
+                width: 180px;
+            }
+            .buttonSideRight::after {
+                width: 180px;
             }
         }
     }
